Blender Internal: Freestyle lines become unintentionally translucent when using full sample AA #56861

Closed
opened 2018-09-21 09:02:05 +02:00 by Shinsuke Irie · 5 comments
Member

System Information
Ubuntu 18.04

Blender Version
2.75-2.79b

Short description of error
Since v2.75, Blender Internal + Freestyle produces unintentional translucent strokes if full sample AA is enabled.
Freestyle_fullsampleAA.png

Exact steps for others to reproduce the error
Attached .blend file.
Freestyle_fullsampleAA.blend

Workaround
I found that the first sample render of Freestyle is never merged into full sample image.

diff --git a/source/blender/render/intern/source/pipeline.c b/source/blender/render/intern/source/pipeline.c
index 97971030dfb..4f2f8d67f45 100644
--- a/source/blender/render/intern/source/pipeline.c
+++ b/source/blender/render/intern/source/pipeline.c
@@ -2454,6 +2454,13 @@ static void do_merge_fullsample(Render *re, bNodeTree *ntree)
                                                BLI_rw_mutex_unlock(&re->resultmutex);
                                                render_result_uncrop(re1);
                                        }
+#ifdef WITH_FREESTYLE
+                                       else if (re1->r.mode & R_EDGE_FRS) {
+                                               BLI_rw_mutex_lock(&re->resultmutex, THREAD_LOCK_WRITE);
+                                               composite_freestyle_renders(re1, 0);
+                                               BLI_rw_mutex_unlock(&re->resultmutex);
+                                       }
+#endif
                                        ntreeCompositTagRender(re1->scene); /* ensure node gets exec to put buffers on stack */
                                }
                        }

Though I'm not sure if this is correct solution, I can obtain desired result.
Freestyle_fullsampleAA_fixed.png

**System Information** Ubuntu 18.04 **Blender Version** 2.75-2.79b **Short description of error** Since v2.75, Blender Internal + Freestyle produces unintentional translucent strokes if full sample AA is enabled. ![Freestyle_fullsampleAA.png](https://archive.blender.org/developer/F4774770/Freestyle_fullsampleAA.png) **Exact steps for others to reproduce the error** Attached .blend file. [Freestyle_fullsampleAA.blend](https://archive.blender.org/developer/F4774820/Freestyle_fullsampleAA.blend) **Workaround** I found that the first sample render of Freestyle is never merged into full sample image. ``` diff --git a/source/blender/render/intern/source/pipeline.c b/source/blender/render/intern/source/pipeline.c index 97971030dfb..4f2f8d67f45 100644 --- a/source/blender/render/intern/source/pipeline.c +++ b/source/blender/render/intern/source/pipeline.c @@ -2454,6 +2454,13 @@ static void do_merge_fullsample(Render *re, bNodeTree *ntree) BLI_rw_mutex_unlock(&re->resultmutex); render_result_uncrop(re1); } +#ifdef WITH_FREESTYLE + else if (re1->r.mode & R_EDGE_FRS) { + BLI_rw_mutex_lock(&re->resultmutex, THREAD_LOCK_WRITE); + composite_freestyle_renders(re1, 0); + BLI_rw_mutex_unlock(&re->resultmutex); + } +#endif ntreeCompositTagRender(re1->scene); /* ensure node gets exec to put buffers on stack */ } } ``` Though I'm not sure if this is correct solution, I can obtain desired result. ![Freestyle_fullsampleAA_fixed.png](https://archive.blender.org/developer/F4774784/Freestyle_fullsampleAA_fixed.png)
Author
Member

Added subscriber: @IRIEShinsuke

Added subscriber: @IRIEShinsuke
Tamito Kajiyama was assigned by Shinsuke Irie 2018-09-21 09:05:36 +02:00
Author
Member

Added subscribers: @mont29, @brecht

Added subscribers: @mont29, @brecht

This issue was referenced by 50731ff596

This issue was referenced by 50731ff5963a058c86e45d153de56b74b9f27176

Thanks, will commit the patch.

Thanks, will commit the patch.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56861
No description provided.