Fix T56861: freestyle + BI + full sample AA not working correct.